--- a/.gitignore
+++ b/.gitignore
@@ -4,6 +4,7 @@
 # .tfstate files
 *.tfstate
 *.tfstate.*
+.terraform.lock.hcl
 
 # Crash log files
 crash.log
@@ -38,3 +39,6 @@ terraform.rc
 
 # Ignore private ssh key
 id_rsa
+
+## TODO: to setup terraform vault
+/k8s/monitoring/grafana-cloud/grafana_cloud_secret.yaml
