added jenkins and renamed somes folders

--- a/kubernetes/openebs/openebs-sc.yaml
+++ b/kubernetes/openebs/openebs-sc.yaml
@@ -10,5 +10,6 @@ metadata:
         value: "/var/openebs/local"
     openebs.io/cas-type: local
 provisioner: openebs.io/local
-reclaimPolicy: Delete
+reclaimPolicy: Retain
 volumeBindingMode: WaitForFirstConsumer
+allowVolumeExpansion: true
