--- a/kubernetes/opensearch/base/opensearch-cluster/resources/secrets/s3.yaml
+++ b/kubernetes/opensearch/base/opensearch-cluster/resources/secrets/s3.yaml
@@ -5,5 +5,5 @@ metadata:
   namespace: default
 type: Opaque
 stringData:
-  AWS_ACCESS_KEY_ID: ""
-  AWS_SECRET_ACCESS_KEY: ""
+  AWS_ACCESS_KEY_ID: "AKIAR72PHH4AALI7J3M4"
+  AWS_SECRET_ACCESS_KEY: "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"
