fix(OSCluster): fixed os-client
Signed-off-by: Charles Rodrigues <charles.rodrigues@safe-e.com>

--- a/kubernetes/opensearch/base/opensearch-cluster/opensearchCluster-custom.yaml
+++ b/kubernetes/opensearch/base/opensearch-cluster/opensearchCluster-custom.yaml
@@ -147,5 +147,11 @@ spec:
         limits:
           memory: "3Gi"
           cpu: "1000m"
+      diskSize: "5Gi"
+      persistence:
+        pvc:
+          storageClass: openebs
+          accessModes:
+            - ReadWriteOnce
       roles:
         - "remote_cluster_client"
