fix(OS): added storageclass
Signed-off-by: Charles Rodrigues <charles.rodrigues@safe-e.com>

--- a/kubernetes/opensearch/base/opensearch-cluster/opensearchCluster-kickstart.yaml
+++ b/kubernetes/opensearch/base/opensearch-cluster/opensearchCluster-kickstart.yaml
@@ -21,7 +21,12 @@ spec:
   nodePools:
     - component: nodes
       replicas: 3
-      diskSize: "5Gi"
+      diskSize: "50Gi"
+      persistence:
+        pvc:
+          storageClass: openebs
+          accessModes:
+            - ReadWriteOnce
       nodeSelector:
       resources:
         requests:
