--- a/kubernetes/opensearch/base/opensearch-cluster/opensearchCluster-kickstart.yaml
+++ b/kubernetes/opensearch/base/opensearch-cluster/opensearchCluster-kickstart.yaml
@@ -1,11 +1,11 @@
 apiVersion: opensearch.opster.io/v1
 kind: OpenSearchCluster
 metadata:
-  name: my-first-cluster
+  name: homelab
   namespace: default
 spec:
   general:
-    serviceName: my-first-cluster
+    serviceName: homelab
     version: 2.3.0
   dashboards:
     enable: true
