--- a/kubernetes/task/initContainer/service-nginx.yaml
+++ b/kubernetes/task/initContainer/service-nginx.yaml
@@ -9,4 +9,4 @@ spec:
     - protocol: TCP
       port: 80
       targetPort: 80
-  type: NodePort  # 'NodePort' porque estamos em um cluster local
+  type: ClusterIP
