--- a/kubernetes/task/initContainer/deployment-nginx.yaml
+++ b/kubernetes/task/initContainer/deployment-nginx.yaml
@@ -15,6 +15,8 @@ spec:
       labels:
         app: nginx
     spec:
+      imagePullSecrets:
+        - name: github-pull-secret
       volumes:
         - name: nginx-repo
           emptyDir: {}
