chore(argocd-imageUpdater): adjust nginx configs
Signed-off-by: Charles Rodrigues <charles.rodrigues@safe-e.com>

--- a/kubernetes/task/initContainer/Dockerfile
+++ b/kubernetes/task/initContainer/Dockerfile
@@ -1,14 +1,15 @@
 # Use the official NGINX image as the base
 FROM nginx:alpine
 
-# Set the working directory inside the container
 WORKDIR /usr/share/nginx/html
 
-# Create a simple index.html file for testing
-RUN echo '<!DOCTYPE html><html><head><title>Custom NGINX</title></head><body><h1>Welcome to My Custom NGINX!</h1></body></html>' > index.html
-
+# Copy a custom index.html file to the NGINX web root
+COPY index.html /usr/share/nginx/html
+# Copy custom NGINX configuration
+#COPY nginx.conf /etc/nginx/conf.d/default.conf
+# Ensure proper permissions for NGINX to read the file
+RUN chmod 644 index.html && chown nginx:nginx index.html
 # Expose port 80 for the web server
 EXPOSE 80
-
 # Start NGINX in the foreground
 CMD ["nginx", "-g", "daemon off;"]
